package com.pluralsight.deli.enums;

public enum Sauces{
    MAYO,
    MUSTARD,
    KETCHUP,
    RANCH,
    THOUSAND_ISLAND,
    VINAIGRETTE,
    AU_JUS;

}
