package com.pluralsight.deli.utility;

public class ReceiptManager {
}
