@startuml
class com.pluralsight.deli.model.Sandwich {
- BreadType breadType
- SandwichSize size
- boolean isToasted
- boolean extraMeat
- boolean extraCheese
- List<RegularToppings> regularToppings
- List<PremiumToppings> premiumToppings
- List<Sauces> sauces
+ void setExtraMeat(boolean)
+ void setExtraCheese(boolean)
+ BreadType getBreadType()
+ void setBreadType(BreadType)
+ SandwichSize getSize()
+ void setSize(SandwichSize)
+ boolean isToasted()
+ void setToasted(boolean)
+ List<RegularToppings> getRegularToppings()
+ List<PremiumToppings> getPremiumToppings()
+ void addRegularTopping(RegularToppings)
+ void addPremiumTopping(PremiumToppings)
+ void addSauce(Sauces)
+ double getPrice()
+ String productDetail()
+ String toString()
}


class com.pluralsight.deli.service.ChipsScreen {
~ {static} Scanner scanner
+ {static} Chips chipsDisplay(Order)
}


class com.pluralsight.deli.service.OrderServiceImpl {
+ void addProductToOrder(Order,Product)
+ Order createNewOrder(String)
+ void checkOut(Order)
+ double totalPrice(Order)
}

enum com.pluralsight.deli.enums.RegularToppings {
+  LETTUCE
+  PEPPERS
+  ONIONS
+  TOMATOES
+  JALAPENOS
+  CUCUMBERS
+  PICKLES
+  GUACAMOLE
+  MUSHROOMS
}

enum com.pluralsight.deli.enums.PremiumToppings {
+  STEAK
+  HAM
+  SALAMI
+  ROAST_BEEF
+  CHICKEN
+  BACON
+  AMERICAN_CHEESE
+  SWISS_CHEESE
+  PROVOLONE_CHEESE
+  CHEDDAR_CHEESE
- Type type
+ Type getType()
}


enum com.pluralsight.deli.enums.Type {
+  MEAT
+  CHEESE
}

enum com.pluralsight.deli.enums.DrinkSize {
+  SMALL
+  MEDIUM
+  LARGE
}

class com.pluralsight.deli.receipt.ReceiptManager {
+ void receipt(Order)
}

abstract class com.pluralsight.deli.model.Product {
# String name
+ String getName()
+ void setName(String)
+ {abstract}double getPrice()
+ {abstract}String productDetail()
}


class com.pluralsight.deli.model.Program {
+ {static} void main(String[])
}

interface com.pluralsight.deli.service.OrderService {
~ void addProductToOrder(Order,Product)
~ Order createNewOrder(String)
~ void checkOut(Order)
~ double totalPrice(Order)
}

class com.pluralsight.deli.service.SandwichServiceImpl {
+ Sandwich createSandwich(String,BreadType,SandwichSize,boolean)
}

enum com.pluralsight.deli.enums.ChipType {
+  POTATO_CHIPS
+  BBQ
+  SOUR_CREAM
+  SALT_AND_VINEGAR
}

class com.pluralsight.deli.model.Chips {
- ChipType chipType
+ double getPrice()
+ String productDetail()
+ String toString()
}


class com.pluralsight.deli.view.UserInterface {
~ Scanner scanner
- SandwichService sandwichService
- OrderService orderService
- Order order
- List<Sandwich> sandwiches
- List<Drink> drinks
- List<Chips> chips
+ void displayHomeScreen()
+ void displayOrderScreen()
+ void addSandwichDisplay(Order)
- void selectRegularToppings(Sandwich)
- void selectPremiumToppings(Sandwich)
- BreadType selectBreadType()
- SandwichSize selectSandwichSize()
+ void addExtraCheeseDisplay(Sandwich)
+ boolean addExtraMeatDisplay(Sandwich)
- boolean selectSignatureOption()
- boolean selectToastedOption()
+ void selectDrink(Order)
+ void chipsDisplay(Order)
- void selectSauces(Sandwich)
+ Order getOrder()
+ void setOrder(Order)
}


interface com.pluralsight.deli.service.SandwichService {
~ Sandwich createSandwich(String,BreadType,SandwichSize,boolean)
}

enum com.pluralsight.deli.enums.SandwichSize {
+  SMALL
+  MEDIUM
+  LARGE
}

enum com.pluralsight.deli.enums.BreadType {
+  WHITE
+  WHEAT
+  RYE
+  WRAP
}

class com.pluralsight.deli.view.Prompts {
~ {static} String homescreenPrompt
~ {static} String regularToppingsPrompt
~ {static} String premiumToppingsPrompt
~ {static} String chipsPrompt
~ {static} String drinksSizePrompt
~ {static} String saucesPrompt
~ {static} String extraCheesePrompt
~ {static} String extraMeatPrompt
~ {static} String isToastedPrompt
}

enum com.pluralsight.deli.enums.Sauces {
+  MAYO
+  MUSTARD
+  KETCHUP
+  RANCH
+  THOUSAND_ISLAND
+  VINAIGRETTE
+  AU_JUS
}

class com.pluralsight.deli.model.Drink {
- DrinkSize size
+ DrinkSize getSize()
+ double getPrice()
+ String productDetail()
+ String toString()
}


class com.pluralsight.deli.model.Order {
- String id
- String customerName
- ArrayList<Product> productsList
+ void addProduct(Product)
+ double totalPrice()
+ ArrayList<Product> getProductsList()
+ String getId()
+ String getCustomerName()
}




com.pluralsight.deli.model.Product <|-- com.pluralsight.deli.model.Sandwich
com.pluralsight.deli.service.OrderService <|.. com.pluralsight.deli.service.OrderServiceImpl
com.pluralsight.deli.service.SandwichService <|.. com.pluralsight.deli.service.SandwichServiceImpl
com.pluralsight.deli.model.Product <|-- com.pluralsight.deli.model.Chips
com.pluralsight.deli.model.Product <|-- com.pluralsight.deli.model.Drink
@enduml